fix(modal): update z-index of overflow when inside modal

--- a/src/components/ComposedModal/_composed-modal.scss
+++ b/src/components/ComposedModal/_composed-modal.scss
@@ -8,6 +8,11 @@
     }
   }
 
+  // Needed to workaround this carbon issue: https://github.com/carbon-design-system/carbon/issues/6662
+  .#{$prefix}--overflow-menu-options {
+    z-index: 10000;
+  }
+
   /* support large modals for ll the sizes */
   &.#{$iot-prefix}--composed-modal--large {
     .#{$prefix}--modal-header {
